fix fundscroller on IE

--- a/Main/Website/LionTrust.Web/Assets/New.FrontEnd/app/styles/sass/blocks/_fund-scroller.sass
+++ b/Main/Website/LionTrust.Web/Assets/New.FrontEnd/app/styles/sass/blocks/_fund-scroller.sass
@@ -4,13 +4,11 @@
         padding: 16px 0 18px
     &__box
         position: relative
-        display: flex
+        display: block
         width: 100%
         min-height: 400px
         margin: 32px 0
-        flex-direction: column
         @include breakpoint(desktop, up)
-            flex-direction: row
             min-height: 673px
 
     // &__left
